# lirios

./: BACKERS.md  CONTRIBUTING.md  README.md  default.xml  env-setup.sh  format  monthly-log
.github/: ISSUE_TEMPLATE.md
config/: CMakeLists.txt  LiriSubprojects.cmake  _clang-format  _commit-template  _dependencies.cmake  dependencies.cmake  liri.pro  liri.qbs
