cmake_minimum_required(VERSION 3.20)

project(Liri
    DESCRIPTION "Liri"
    LANGUAGES CXX C
)

## Add some paths to check for CMake modules:
set(LIRI_LOCAL_ECM TRUE)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-shared/modules")

## Liri specific setup common for all modules:
include(LiriSetup)

## Add sub-projects (respect dependency order):
add_subdirectory(cmake-shared)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/fluid")
    add_subdirectory(fluid)
endif()
if(UNIX AND NOT ANDROID)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/qtaccountsservice")
        add_subdirectory(qtaccountsservice)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/qtudev")
        add_subdirectory(qtudev)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/qtgsettings")
        add_subdirectory(qtgsettings)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libliri")
        add_subdirectory(libliri)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/appcenter")
        add_subdirectory(appcenter)
    endif()
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/browser")
    add_subdirectory(browser)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/calculator")
    add_subdirectory(calculator)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/files")
    add_subdirectory(files)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/player")
    add_subdirectory(player)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/text")
    add_subdirectory(text)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/terminal")
    add_subdirectory(terminal)
endif()
if(UNIX AND NOT ANDROID)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/eglfs")
        add_subdirectory(eglfs)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/wayland")
        add_subdirectory(wayland)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/qtintegration")
        add_subdirectory(qtintegration)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/session")
        add_subdirectory(session)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/networkmanager")
        add_subdirectory(networkmanager)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/pulseaudio")
        add_subdirectory(pulseaudio)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/power-manager")
        add_subdirectory(power-manager)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/qml-xwayland")
        add_subdirectory(qml-xwayland)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/screencast")
        add_subdirectory(screencast)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/screenshot")
        add_subdirectory(screenshot)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/settings")
        add_subdirectory(settings)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/shell")
        add_subdirectory(shell)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/initial-setup")
        add_subdirectory(initial-setup)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/xdg-desktop-portal-liri")
        add_subdirectory(xdg-desktop-portal-liri)
    endif()
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/themes")
        add_subdirectory(themes)
    endif()
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/wallpapers")
    add_subdirectory(wallpapers)
endif()
if(LINUX AND NOT ANDROID)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/calamares-branding")
        add_subdirectory(calamares-branding)
    endif()
endif()
